🚀 feat: zustand ThemeProvider

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "superjson": "1.12.2",
     "tailwind-merge": "^1.13.2",
     "tailwindcss-animate": "^1.0.6",
-    "zod": "^3.21.4"
+    "zod": "^3.21.4",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@types/eslint": "^8.37.0",
