--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@elastic/elasticsearch": "^8.8.1",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tooltip": "^1.0.6",
     "@t3-oss/env-nextjs": "^0.3.1",
     "@tanstack/react-query": "^4.29.7",
     "@trpc/client": "^10.26.0",
@@ -19,7 +20,7 @@
     "@trpc/server": "^10.26.0",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
-    "lucide-react": "^0.244.0",
+    "lucide-react": "^0.248.0",
     "next": "^13.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
