🧪 test: node debugger setup

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,9 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "outDir": "out",
+    "sourceMap": true
   },
   "include": [
     ".eslintrc.cjs",
