🚀 feat: linode terraform
- Create and provision Linode instance to run the Elasticsearch cluster
- Change elastic-cluster.yml generate certificates dynamically to ELASTIC_HOST_IP
- Change app to use ELASTIC_CERT env variable

--- a/.gitignore
+++ b/.gitignore
@@ -37,10 +37,15 @@ yarn-error.log*
 .env*.local
 
 ca.key
-**/ca.key
+**/ca.*
+certs
 
 # vercel
 .vercel
 
 # typescript
 *.tsbuildinfo
+
+# terraform
+**/.terraform*
+terraform.*
