--- a/elasticsearch/elastic-cluster.yml
+++ b/elasticsearch/elastic-cluster.yml
@@ -26,16 +26,15 @@ services:
           "instances:\n"\
           "  - name: es01\n"\
           "    dns:\n"\
-          "      - es01\n"\
+          "      - ${ELASTIC_HOST_IP:-127.0.0.1}\n"\
           "      - localhost\n"\
+          "      - es01\n"\
           "    ip:\n"\
-          "      - 127.0.0.1\n"\
+          "      - ${ELASTIC_HOST_IP:-127.0.0.1}\n"\
           "  - name: es02\n"\
           "    dns:\n"\
           "      - es02\n"\
           "      - localhost\n"\
-          "    ip:\n"\
-          "      - 127.0.0.1\n"\
           > config/certs/instances.yml;
           bin/elasticsearch-certutil cert --silent --pem -out config/certs/certs.zip --in config/certs/instances.yml --ca-cert config/certs/ca/ca.crt --ca-key config/certs/ca/ca.key;
           unzip config/certs/certs.zip -d config/certs;
@@ -137,7 +136,7 @@ services:
       interval: 10s
       timeout: 10s
       retries: 120
-      
+
   kibana:
     depends_on:
       es01:
