--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-intersection-observer": "^9.5.1",
     "superjson": "1.12.2",
     "tailwind-merge": "^1.13.2",
+    "tailwind-scrollbar": "^3.0.4",
     "tailwindcss-animate": "^1.0.6",
     "zod": "^3.21.4",
     "zustand": "^4.3.8"
