--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@trpc/server": "^10.26.0",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
+    "isomorphic-dompurify": "^1.7.0",
     "lucide-react": "^0.248.0",
     "next": "^13.4.2",
     "react": "18.2.0",
