--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "t3-elasticwiki",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "build": "next build",
     "dev": "next dev",
     "debug": "NODE_OPTIONS='--inspect' next dev",
+    "test": "vitest --config ./vitest.config.ts",
     "lint": "next lint",
     "start": "next start"
   },
@@ -50,7 +52,8 @@
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.2.8",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "vitest": "^0.33.0"
   },
   "ct3aMetadata": {
     "initVersion": "7.14.0"
