--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
     "cmdk": "^0.2.0",
+    "date-fns": "^2.30.0",
     "lucide-react": "^0.248.0",
     "next": "^13.4.2",
     "react": "18.2.0",
+    "react-day-picker": "^8.8.0",
     "react-dom": "18.2.0",
     "react-intersection-observer": "^9.5.1",
     "superjson": "1.12.2",
