--- a/.envrc.example
+++ b/.envrc.example
@@ -1,6 +1,6 @@
 export ES_PORT=9200
 export ELASTIC_HOST=https://localhost:$ES_PORT
-export ELASTIC_USER=user
+export ELASTIC_USER=elastic
 export ELASTIC_PASSWORD=pass
 export ELASTIC_CERT=$(cat ./certs/ca.crt)
 
@@ -27,5 +27,5 @@ export TF_VAR_linode_tk=$LINODE_TOKEN
 export TF_VAR_linode_user=user
 export TF_VAR_linode_pass=pass
 export TF_VAR_ssh_key=$(cat ~/.ssh/key.pub)
-export TF_VAR_elastic_dir=dir
+export TF_VAR_elastic_dir=/elasticsearch
 export TF_VAR_elastic_port=$ES_PORT
